# diy-sqlite

./: CMakeLists.txt  CMakePresets.json  DESIGN.md  HACKING.md  README.md  ROADMAP.md  conanfile.py
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: input_buffer.cpp  input_buffer.hpp  lib.cpp  main.cpp
source/backend/: pager.cpp  pager.hpp
source/frontend/: grammar.txt  parser.cpp  parser.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp  utils.hpp
source/frontend/parser/: def.hpp  parser.cpp  parser.hpp
source/frontend/tokenizer/: token.hpp  tokenizer.cpp  tokenizer.hpp  utils.hpp
test/: CMakeLists.txt
test/source/: TestBasicPager.cpp  TestInputBuffer.cpp  TestParser.cpp  TestTokenizer.cpp  diy-sqlite_test.cpp
